--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 								    
 							    </div><!--//resume-timeline-->   
 						    </div>
-					    </section><!--//experience-section-->
+					    </section><!--//project-section-->
 				    </div>
 				    <div class="col-lg-3">
 					    <section class="resume-section skills-section mb-5">
@@ -287,16 +287,19 @@
 								        <div class="resume-degree font-weight-bold">B.Tech in Computer Science & Engineering</div>
 								        <div class="resume-degree-org">ABES Engineering College, Ghaziabad</div>
 								        <div class="resume-degree-time">2015 - Present</div>
+								         <div class="resume-degree-percentage">Percentage: 83.2%</div>
 								    </li>
-								    <li>
+								    <li class="mb-2">
 								        <div class="resume-degree font-weight-bold">Senior Secondary Education</div>
 								        <div class="resume-degree-org">Army Public School, Agra</div>
 								        <div class="resume-degree-time">2014 - 2015</div>
+								        <div class="resume-degree-percentage">Percentage: 92.8%</div>
 								    </li>
-								    <li>
+								    <li class="mb-2">
 								        <div class="resume-degree font-weight-bold">Secondary Education</div>
 								        <div class="resume-degree-org">Army Public School, Agra</div>
 								        <div class="resume-degree-time">2012 - 2013</div>
+								        <div class="resume-degree-cgpa">CGPA: 9.8</div>
 								    </li>
 							    </ul>
 						    </div>
@@ -308,17 +311,28 @@
 								    <li class="mb-2 pl-4 position-relative">
 								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
 								        <div class="resume-award-name">Honorable Mention at ICPC Regionals 2018</div>
-								        <div class="resume-award-desc">Our Team Secured 185th Rank in ICPC Regionals 2018 Amritapuri Site.</div>
+								       <!--  <div class="resume-award-desc">Our Team Secured 185th Rank in ICPC Regionals 2018 Amritapuri Site.</div> -->
+								    </li>
+								     <li class="mb-2 pl-4 position-relative">
+								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
+								        <div class="resume-award-name">Qualified for Facebook HackerCup 2018 Round 1</div>
+								       <!--  <div class="resume-award-desc">Our Team Secured 185th Rank in ICPC Regionals 2018 Amritapuri Site.</div> -->
+								    </li>
+								     <li class="mb-2 pl-4 position-relative">
+								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
+								        <div class="resume-award-name">AIR - 299 in CodeVita 2018 Round 1</div>
+								       <!--  <div class="resume-award-desc">Our Team Secured 185th Rank in ICPC Regionals 2018 Amritapuri Site.</div> -->
 								    </li>
 								    <li class="mb-0 pl-4 position-relative">
 								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
 								        <div class="resume-award-name">Director Silver Medal</div>
-								        <div class="resume-award-desc">Silver Medal from Director for securing second highest percentage in B.Tech First Year(2015).</div>
+								       <!--  <div class="resume-award-desc">Silver Medal from Director for securing second highest percentage in B.Tech First Year(2015).</div> -->
 								    </li>
 							    </ul>
 						    </div>
-					    </section><!--//language-section-->
-					    <section class="resume-section language-section mb-5">
+					    </section>
+					    <!--//language-section-->
+					    <!-- <section class="resume-section language-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Language</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled resume-lang-list">
@@ -326,8 +340,19 @@
 								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">English</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
 							    </ul>
 						    </div>
-					    </section><!--//interests-section-->
-					    <section class="resume-section interests-section mb-5">
+					    </section> -->
+					    <!--//Co-Curricular Activities-section-->
+					    <section class="resume-section language-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Co-curricular Activities</h2>
+						    <div class="resume-section-content">
+							    <ul class="list-unstyled resume-lang-list">
+								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Event Manager</span> <small class="text-muted font-weight-normal">at Enigma Programming Club, ABESEC, Ghaziabad</small></li>
+								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">Core Team Memeber</span> <small class="text-muted font-weight-normal">at HUHC(Help Us to Help the Child), Ghaziabad</small></li>
+							    </ul>
+						    </div>
+					    </section>
+					    <!--//interests-section-->
+					    <!-- <section class="resume-section interests-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
@@ -336,7 +361,7 @@
 								    <li class="mb-1">Reading Quotes</li>
 							    </ul>
 						    </div>
-					    </section><!--//interests-section-->
+					    </section> --><!--//interests-section-->
 					    
 				    </div>
 			    </div><!--//row-->
