--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Nandishwar Garg</h1>
 						    <div class="title mb-3">Full Stack Developer</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
-							    <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7838165332</a></li>
+							    <li class="mb-2"><a href="mailto: nandishwar786garg@gmail.com"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
+							    <li><a href="tel:+917838165332"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7838165332</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/nandishwar-garg</a></li>
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/nandishwar001</a></li>
-				                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fas fa-code fa-fw"></i></span>hackerrank.com/nandishwar001</a></li>
-				                <li><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-facebook"></i></span>facebook.com/nandishwar.garg</a></li>
+				                <li class="mb-3"><a href="https://www.linkedin.com/in/nandishwar-garg/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/nandishwar-garg</a></li>
+				                <li class="mb-3"><a href="https://github.com/nandishwar001"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/nandishwar001</a></li>
+				                <li class="mb-3"><a href="https://www.hackerrank.com/nandishwar001"><span class="fa-container text-center mr-2"><i class="fas fa-code fa-fw"></i></span>hackerrank.com/nandishwar001</a></li>
+				                <li><a href="https://www.facebook.com/nandishwar.garg"><span class="fa-container text-center mr-2"><i class="fab fa-facebook"></i></span>facebook.com/nandishwar.garg</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 					    
@@ -372,5 +372,4 @@
 	    
     </footer>
 </body>
-</html> 
-
+</html>
