--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Nandishwar Garg</h1>
-						    <div class="title mb-3">Full Stack Developer</div>
+						    <div class="title mb-3">Software Engineer</div>
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="mailto: nandishwar786garg@gmail.com"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
 							    <li><a href="tel:+917838165332"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7838165332</a></li>
@@ -89,6 +89,7 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">BitBucket</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Zabbix</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -116,6 +117,7 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT-P</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">BitBucket</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -153,6 +155,43 @@
 							    </div><!--//resume-timeline-->   
 						    </div>
 					    </section><!--//experience-section-->
+					    <section class="resume-section project-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Publications</h2>
+						    <div class="resume-section-content">
+							    <div class="resume-timeline position-relative">
+								    <article class="resume-timeline-item position-relative pb-5">
+									    
+									    <div class="resume-timeline-item-header mb-2">
+										    <!--<div class="d-flex flex-column flex-md-row">
+										        <h3 class="resume-position-title font-weight-bold mb-1">Poverty Prediction Using CNNs</h3>
+										    </div>-->
+										    <!--<div class="resume-position-time">Jul 2018 - Jun 2019</div>-->
+										    <p>P. Agarwal, N. Garg, and P. Singh, “Predicting poverty index using Machine Learning on remote sensing and household survey data,” International Journal of Recent Technology and Engineering, vol. 8, no. 3, Sep., pp. 164-168, 2019, <a href = "https://doi.org/10.35940/ijrte.C3918.098319">https://doi.org/10.35940/ijrte.C3918.098319</a>.</p>
+									    </div><!--//resume-timeline-item-header-->
+									    <div class="resume-timeline-item-desc">
+										    <ul>
+										    	<li> Machine learning based research using CNNs to map poverty of India using aerial photographs and survey data.</li>
+											    <li>Transfer learning approach used to fine tune a modified Inception v3 model on a dataset of 60,000 daylight aerial images of India and corresponding nightlight and survey data.</li>
+											    <li>Data sources included HERE Maps API for daylight images, DMSP-OLS for nightlight images and DHS Program Survey Data.</li>
+											    <li>Achieved an r value of 0.73 despite the data being noisy.</li>
+										    </ul>
+										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
+										    <ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Python</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PyTorch</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NumPy</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">R</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Pandas</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">scikit-learn</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">matpolitlib</span></li>
+										    </ul>
+									    </div><!--//resume-timeline-item-desc-->
+
+								    </article><!--//resume-timeline-item-->
+								    
+							    </div><!--//resume-timeline-->   
+						    </div>
+					    </section><!--//publications-section-->
 					     <section class="resume-section project-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Projects</h2>
 						    <div class="resume-section-content">
