--- a/index.html
+++ b/index.html
@@ -402,16 +402,6 @@
 							    </ul>
 						    </div>
 					    </section>
-					    <!--//language-section-->
-					    <!-- <section class="resume-section language-section mb-5">
-						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Language</h2>
-						    <div class="resume-section-content">
-							    <ul class="list-unstyled resume-lang-list">
-								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Hindi</span> <small class="text-muted font-weight-normal">(Native)</small></li>
-								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">English</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
-							    </ul>
-						    </div>
-					    </section> -->
 					    <!--//Co-Curricular Activities-section-->
 					    <section class="resume-section language-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Co-curricular Activities</h2>
@@ -423,8 +413,18 @@
 							    </ul>
 						    </div>
 					    </section>
+					    <!--//language-section-->
+					    <section class="resume-section language-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Language</h2>
+						    <div class="resume-section-content">
+							    <ul class="list-unstyled resume-lang-list">
+								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Hindi</span> <small class="text-muted font-weight-normal">(Native)</small></li>
+								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">English</span> <small class="text-muted font-weight-normal">(Professional)</small></li>
+							    </ul>
+						    </div>
+					    </section>
 					    <!--//interests-section-->
-					    <!-- <section class="resume-section interests-section mb-5">
+					    <section class="resume-section interests-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Interests</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
@@ -433,8 +433,7 @@
 								    <li class="mb-1">Reading Quotes</li>
 							    </ul>
 						    </div>
-					    </section> --><!--//interests-section-->
-					    
+					    </section> --><!--//interests-section-->  
 				    </div>
 			    </div><!--//row-->
 		    </div><!--//resume-body-->    
