--- a/index.html
+++ b/index.html
@@ -409,7 +409,10 @@
 							    <ul class="list-unstyled resume-lang-list">
 								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Former Event Manager</span> <small class="text-muted font-weight-normal">at Enigma Programming Club, ABESEC, Ghaziabad</small></li>
 								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Former Problem Setter</span> <small class="text-muted font-weight-normal">at Enigma Programming Club, ABESEC, Ghaziabad</small></li>
+								    <li class="mb-2"><span class="resume-lang-name font-weight-bold">Former Programming Coordinator</span> <small class="text-muted font-weight-normal">at Enigma Programming Club, ABESEC, Ghaziabad</small></li>
 								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">Former Core Team Member</span> <small class="text-muted font-weight-normal">at HUHC(Help Us to Help the Child), Ghaziabad</small></li>
+								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">Former Event Coordinator</span> <small class="text-muted font-weight-normal">at college annual fest(Genero-2017) in TECH CS Club, ABESEC, Ghaziabad</small></li>
+								    <li class="mb-2 align-middle"><span class="resume-lang-name font-weight-bold">Former Member</span> <small class="text-muted font-weight-normal">of NSS Club, ABESEC, Ghaziabad</small></li>
 							    </ul>
 						    </div>
 					    </section>
@@ -430,10 +433,10 @@
 							    <ul class="list-unstyled">
 								    <li class="mb-1">Cricket</li>
 								    <li class="mb-1">Cooking</li>
-								    <li class="mb-1">Reading Quotes</li>
+								    <li class="mb-1">Reading Quotes of Dr. A.P.J. Abdul Kalam</li>
 							    </ul>
 						    </div>
-					    </section> --><!--//interests-section-->  
+					    </section> <!--//interests-section-->  
 				    </div>
 			    </div><!--//row-->
 		    </div><!--//resume-body-->    
