--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Nandishwar Garg</h1>
 						    <div class="title mb-3">Software Engineer</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="mailto: nandishwar786garg@gmail.com"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
-							    <li><a href="tel:+917838165332"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7838165332</a></li>
+							    <li class="mb-2"><a href="mailto: nandishwar786garg@gmail.com" target="_blank"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>nandishwar786garg@gmail.com</a><li>
+							    <li><a href="tel:+917838165332" target="_blank"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>7838165332</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
-				                <li class="mb-3"><a href="https://www.linkedin.com/in/nandishwar-garg/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/nandishwar-garg</a></li>
-				                <li class="mb-3"><a href="https://github.com/nandishwar001"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/nandishwar001</a></li>
-				                <li class="mb-3"><a href="https://www.hackerrank.com/nandishwar001"><span class="fa-container text-center mr-2"><i class="fas fa-code fa-fw"></i></span>hackerrank.com/nandishwar001</a></li>
-				                <li><a href="https://www.facebook.com/nandishwar.garg"><span class="fa-container text-center mr-2"><i class="fab fa-facebook"></i></span>facebook.com/nandishwar.garg</a></li>
+				                <li class="mb-3"><a href="https://www.linkedin.com/in/nandishwar-garg/" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/nandishwar-garg</a></li>
+				                <li class="mb-3"><a href="https://github.com/nandishwar001" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/nandishwar001</a></li>
+				                <li class="mb-3"><a href="https://www.hackerrank.com/nandishwar001" target="_blank"><span class="fa-container text-center mr-2"><i class="fas fa-code fa-fw"></i></span>hackerrank.com/nandishwar001</a></li>
+				                <li><a href="https://www.facebook.com/nandishwar.garg" target="_blank"><span class="fa-container text-center mr-2"><i class="fab fa-facebook"></i></span>facebook.com/nandishwar.garg</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 					    
@@ -55,7 +55,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Energetic Software Engineer with experience of 1+ year in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Energetic Software Engineer with experience of 1+ year in development and deployment cycle. Enthusiastic team player dedicated to streamling process and proper resource management within team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -166,7 +166,7 @@
 										        <h3 class="resume-position-title font-weight-bold mb-1">Poverty Prediction Using CNNs</h3>
 										    </div>-->
 										    <!--<div class="resume-position-time">Jul 2018 - Jun 2019</div>-->
-										    <p>P. Agarwal, N. Garg, and P. Singh, “Predicting poverty index using Machine Learning on remote sensing and household survey data,” International Journal of Recent Technology and Engineering, vol. 8, no. 3, Sep., pp. 164-168, 2019, <a href = "https://doi.org/10.35940/ijrte.C3918.098319">https://doi.org/10.35940/ijrte.C3918.098319</a>.</p>
+										    <p>P. Agarwal, N. Garg, and P. Singh, “Predicting poverty index using Machine Learning on remote sensing and household survey data,” International Journal of Recent Technology and Engineering, vol. 8, no. 3, Sep., pp. 164-168, 2019, <a href = "https://doi.org/10.35940/ijrte.C3918.098319" target="_blank">https://doi.org/10.35940/ijrte.C3918.098319</a>.</p>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <ul>
@@ -433,7 +433,7 @@
 							    <ul class="list-unstyled">
 								    <li class="mb-1">Cricket</li>
 								    <li class="mb-1">Cooking</li>
-								    <li class="mb-1">Reading Quotes of Dr. A.P.J. Abdul Kalam</li>
+								    <li class="mb-1">Reading Motivational Quotes</li>
 							    </ul>
 						    </div>
 					    </section> <!--//interests-section-->  
