--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Energetic Software Engineer with experience of 1+ year in development and deployment cycle. Enthusiastic team player dedicated to streamling process and proper resource management within team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Energetic Software Engineer with an experience of 1+ year in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
