--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 										    <ul>
 										    	<li>Created virtual machines using ARM Template, Powershell script, etc</li>
 											    <li>Worked on Azure IoT Hub</li>
-											    <li>Done project on device to cloud messaging using Azure IoT Hub</li>
+											    <li>Did project on device to cloud messaging using Azure IoT Hub</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
