--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 									    <div class="resume-timeline-item-desc">
 										    <h5>Role Description</h5>
 										    <ul>
-										    	<li>Worked on GWT-P architecture and developed various features in the existing product.</li>
+										    	<li>Worked on GWT architecture and developed various features in the existing product.</li>
 										    	<li>Ensured proper and stable delivery of releases by fixing issues during the release cycle.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
@@ -281,9 +281,15 @@
 					    <section class="resume-section skills-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
 						    <div class="resume-section-content">
-						        <div class="resume-skill-item">
+						       <div class="resume-skill-item">
 							        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
 							        <ul class="list-unstyled mb-4">
+							        	<li class="mb-2">
+								            <div class="resume-skill-name">GWT</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">HTML/CSS</div>
 									        <div class="progress resume-progress">
@@ -294,12 +300,6 @@
 								            <div class="resume-skill-name">Bootstrap</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">GWT Material Design</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
@@ -315,21 +315,27 @@
 						            <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
 							        <ul class="list-unstyled">
 								        <li class="mb-2">
-								            <div class="resume-skill-name">GWT-P</div>
+								            <div class="resume-skill-name">Java</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">Ruby on Rails</div>
+								         <li class="mb-2">
+								            <div class="resume-skill-name">Postgres</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Python</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Ruby on Rails</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
