--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
 									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
 										    <h5>Role Description</h5>
 										    <ul>
-										    	<li>Currently, working on Zabbix Notification Center.</li>
+										    	<!--<li>Currently, working on Zabbix Notification Center.</li>-->
 										    	<li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT-P</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">BitBucket</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Zabbix</span></li>
+											    <!--<li class="list-inline-item"><span class="badge badge-primary badge-pill">Zabbix</span></li>-->
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -114,7 +114,7 @@
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT-P</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
@@ -146,7 +146,6 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">.Net</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Power BI</span></li>
 											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Visual Studio</span></li>
-
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -162,10 +161,6 @@
 								    <article class="resume-timeline-item position-relative pb-5">
 									    
 									    <div class="resume-timeline-item-header mb-2">
-										    <!--<div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Poverty Prediction Using CNNs</h3>
-										    </div>-->
-										    <!--<div class="resume-position-time">Jul 2018 - Jun 2019</div>-->
 										    <p>P. Agarwal, N. Garg, and P. Singh, “Predicting poverty index using Machine Learning on remote sensing and household survey data,” International Journal of Recent Technology and Engineering, vol. 8, no. 3, Sep., pp. 164-168, 2019, <a href = "https://doi.org/10.35940/ijrte.C3918.098319" target="_blank">https://doi.org/10.35940/ijrte.C3918.098319</a>.</p>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
@@ -321,7 +316,7 @@
 											</div>
 								        </li>
 								         <li class="mb-2">
-								            <div class="resume-skill-name">Postgres</div>
+								            <div class="resume-skill-name">PostgreSQL</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
