--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
 										    <h5>Role Description</h5>
 										    <ul>
-										    	<!--<li>Currently, working on Zabbix Notification Center.</li>-->
+										    	<li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 										    	<li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
 										    </ul>
@@ -87,10 +87,9 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">BitBucket</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">ReactJS</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											    <!--<li class="list-inline-item"><span class="badge badge-primary badge-pill">Zabbix</span></li>-->
+											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -116,9 +115,8 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">BitBucket</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
 
@@ -292,17 +290,18 @@
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Bootstrap</div>
+								            <div class="resume-skill-name">JavaScript</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">JavaScript</div>
+								            <div class="resume-skill-name">Bootstrap</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
-								        </li>    
+								        </li>
+								            
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
@@ -330,7 +329,7 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Ruby on Rails</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -386,7 +385,7 @@
 								    </li>
 								    <li class="mb-2 pl-4 position-relative">
 								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
-								        <div class="resume-award-name">Honorable Mention at ICPC Regionals 2018-19</div>
+								        <div class="resume-award-name">Honorable Mention at ICPC Regionals 2018</div>
 								    </li>
 								     <li class="mb-2 pl-4 position-relative">
 								        <i class="resume-award-icon fas fa-trophy position-absolute" data-fa-transform="shrink-2"></i>
