Made consistent with Digital Portfolio

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Software Engineer-I</h3>
-										        <div class="resume-company-name ml-auto">Ameyo, Gurugram</div>
+										        <div class="resume-company-name ml-auto">Ameyo, Gurgaon</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">Jul 2019 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
@@ -100,7 +100,7 @@
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
 										        <h3 class="resume-position-title font-weight-bold mb-1">Intern-Product</h3>
-										        <div class="resume-company-name ml-auto">Ameyo, Gurugram</div>
+										        <div class="resume-company-name ml-auto">Ameyo, Gurgaon</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">Jan 2019 - Jul 2019</div>
 									    </div><!--//resume-timeline-item-header-->
