--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
 										    <h5>Role Description</h5>
 										    <ul>
-										    	<li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 										    	<li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
+											    <li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
+											    <li>Provided L4 support for customer HDFC Bank. Debugged and resolved various critical issues.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
@@ -108,6 +109,7 @@
 										    <h5>Role Description</h5>
 										    <ul>
 										    	<li>Worked on GWT architecture and developed various features in the existing product.</li>
+										    	<li>Developed Voice-Call related features.</li>
 										    	<li>Ensured proper and stable delivery of releases by fixing issues during the release cycle.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
@@ -327,7 +329,7 @@
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Ruby on Rails</div>
+								            <div class="resume-skill-name">NodeJS</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
