--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Energetic Software Engineer with an experience of 1+ year in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 1.5 years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -78,22 +78,28 @@
 									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
 										    <h5>Role Description</h5>
 										    <ul>
-										    	<li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
-											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
+										    	<li>Corrected and stabilized various monitoring and reporting data points across the dashboard, live monitoring, and reports in Ameyo by identifying the product as well as
+										    	technical gaps.</li>
+										    	<li>Contributed in delivering Groups & Groups Hierarchy in GA 4.8.</li>
 											    <li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 											    <li>Provided L4 support for customer HDFC Bank. Debugged and resolved various critical issues.</li>
+											    <li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
+											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">REST</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">ReactJS</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">React.js</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agile</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
-											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
-
 								    </article>
 
 								    <article class="resume-timeline-item position-relative pb-5">
@@ -116,7 +122,11 @@
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GWT</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">REST</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">PostgreSQL</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Linux</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Agile</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jenkins</span></li>
 										    </ul>
@@ -148,9 +158,7 @@
 											     <li class="list-inline-item"><span class="badge badge-primary badge-pill">Microsoft Visual Studio</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
-
-								    </article><!--//resume-timeline-item-->
-								    
+								    </article><!--//resume-timeline-item-->  
 							    </div><!--//resume-timeline-->   
 						    </div>
 					    </section><!--//experience-section-->
@@ -181,9 +189,7 @@
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">matpolitlib</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
-
 								    </article><!--//resume-timeline-item-->
-								    
 							    </div><!--//resume-timeline-->   
 						    </div>
 					    </section><!--//publications-section-->
@@ -329,7 +335,7 @@
 											</div>
 								        </li>
 								        <li class="mb-2">
-								            <div class="resume-skill-name">NodeJS</div>
+								            <div class="resume-skill-name">Node.js</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
@@ -340,13 +346,12 @@
 						        <div class="resume-skill-item">
 						            <h4 class="resume-skills-cat font-weight-bold">Others</h4>
 						            <ul class="list-inline">
+						            	<li class="list-inline-item"><span class="badge badge-light">C</span></li>
+						            	<li class="list-inline-item"><span class="badge badge-light">C++</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Data Structures & Algorithms</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Linux</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Git</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">REST</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">MVC</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Jenkins</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Agile</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
 						            </ul>
 						        </div><!--//resume-skill-item-->
