--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										    	technical gaps.</li>
 										    	<li>Contributed in delivering Groups & Groups Hierarchy in GA 4.8.</li>
 											    <li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
-											    <li>Provided L4 support for customer HDFC Bank. Debugged and resolved various critical issues.</li>
+											    <li>Provided L4 support for a leading banking project and resolved critical issues with proper RCA.</li>
 											    <li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
 										    </ul>
@@ -331,7 +331,7 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">Python</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 								        <li class="mb-2">
@@ -340,15 +340,21 @@
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">MongoDB</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
 						        <div class="resume-skill-item">
 						            <h4 class="resume-skills-cat font-weight-bold">Others</h4>
 						            <ul class="list-inline">
+						            	<li class="list-inline-item"><span class="badge badge-light">Data Structures & Algorithms</span></li>
 						            	<li class="list-inline-item"><span class="badge badge-light">C</span></li>
 						            	<li class="list-inline-item"><span class="badge badge-light">C++</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Data Structures & Algorithms</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">MVC</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
