Work Experience updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="./assets/css/pillar-1.css">
 
-
 </head> 
 
 <body>	
@@ -55,7 +54,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Career Summary</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 1.5 years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
+					    <p class="mb-0">I am a quick learner with a never-give-up attitude. Passionate and hard-working Software Engineer with an experience of 2+ years in development and deployment cycle. Enthusiastic team player dedicated to streamlining process and proper resource management within the team. I love competitive programming, mathematics and exploring new tools/technologies.</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    <div class="row">
@@ -72,7 +71,7 @@
 										        <h3 class="resume-position-title font-weight-bold mb-1">Software Engineer-I</h3>
 										        <div class="resume-company-name ml-auto">Ameyo, Gurgaon</div>
 										    </div><!--//row-->
-										    <div class="resume-position-time">Jul 2019 - Present</div>
+										    <div class="resume-position-time">Jul 2019 - Jan 2021</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
@@ -80,8 +79,9 @@
 										    <ul>
 										    	<li>Corrected and stabilized various monitoring and reporting data points across the dashboard, live monitoring, and reports in Ameyo by identifying the product as well as
 										    	technical gaps.</li>
+										    	<li>Contributed in delivering Number Masking in GA 4.11.</li>
+										    	<li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 										    	<li>Contributed in delivering Groups & Groups Hierarchy in GA 4.8.</li>
-											    <li>Developed Apps using ReactJS from scratch for Video KYC Project.</li>
 											    <li>Provided L4 support for a leading banking project and resolved critical issues with proper RCA.</li>
 											    <li>Delivered many product requests in Accelerated RoadMap Development mode creating value to the company's existing product.</li>
 											    <li>Developed in various complex modules from scratch with good quality while adhering to the time-lines.</li>
@@ -356,7 +356,7 @@
 						            	<li class="list-inline-item"><span class="badge badge-light">C</span></li>
 						            	<li class="list-inline-item"><span class="badge badge-light">C++</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">MVC</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">Spring</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
 						            </ul>
