--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
 						    <div class="resume-section-content">
 							    <div class="resume-timeline position-relative">
 
+									<article class="resume-timeline-item position-relative pb-5">
+   
+									    <div class="resume-timeline-item-header mb-2">
+										    <div class="d-flex flex-column flex-md-row">
+										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L1(NodeJS Developer)</h3>
+										        <div class="resume-company-name ml-auto">Publicis Sapient, Bengaluru</div>
+										    </div><!--//row-->
+										    <div class="resume-position-time">Feb 2021 - Present</div>
+									    </div><!--//resume-timeline-item-header-->
+									    <div class="resume-timeline-item-desc">
+										    <h5>Role Description</h5>
+										    <ul>
+										    	<li>Implementing backend functionalities using NodeJS, NestJS and GraphQL.</li>
+										    	<li>Working on AWS AppConfig, Docker, etc.</li>
+										    </ul>
+										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
+										    <ul class="list-inline">
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NodeJS</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NestJS</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GraphQL</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">TypeScript</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">AWS AppConfig</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Gitlab</span></li>
+										    </ul>
+									    </div><!--//resume-timeline-item-desc-->
+								    </article>
+
 							    	<article class="resume-timeline-item position-relative pb-5">
    
 									    <div class="resume-timeline-item-header mb-2">
@@ -74,7 +104,6 @@
 										    <div class="resume-position-time">Jul 2019 - Jan 2021</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-									    	<p class="mb-0">Ameyo is a customer experience platform that helps enterprises of all sizes to connect, serve and support their customers.</p>
 										    <h5>Role Description</h5>
 										    <ul>
 										    	<li>Corrected and stabilized various monitoring and reporting data points across the dashboard, live monitoring, and reports in Ameyo by identifying the product as well as
@@ -173,7 +202,7 @@
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <ul>
-										    	<li> Machine learning based research using CNNs to map poverty of India using aerial photographs and survey data.</li>
+										    	<li>Machine learning based research using CNNs to map poverty of India using aerial photographs and survey data.</li>
 											    <li>Transfer learning approach used to fine tune a modified Inception v3 model on a dataset of 60,000 daylight aerial images of India and corresponding nightlight and survey data.</li>
 											    <li>Data sources included HERE Maps API for daylight images, DMSP-OLS for nightlight images and DHS Program Survey Data.</li>
 											    <li>Achieved an r value of 0.73 despite the data being noisy.</li>
@@ -283,6 +312,43 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
 						    <div class="resume-section-content">
 						       <div class="resume-skill-item">
+							        <h4 class="resume-skills-cat font-weight-bold">Programming Languages</h4>
+							        <ul class="list-unstyled mb-4">
+							        	<li class="mb-2">
+								            <div class="resume-skill-name">C</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">C++</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">Java</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+								        <li class="mb-2">
+								            <div class="resume-skill-name">JavaScript</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+										<li class="mb-2">
+								            <div class="resume-skill-name">TypeScript</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+
+							        </ul>
+						        </div><!--//resume-skill-item-->
+
+								<div class="resume-skill-item">
 							        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
 							        <ul class="list-unstyled mb-4">
 							        	<li class="mb-2">
@@ -293,12 +359,6 @@
 								        </li>
 								        <li class="mb-2">
 								            <div class="resume-skill-name">HTML/CSS</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">JavaScript</div>
 									        <div class="progress resume-progress">
 											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
@@ -317,48 +377,50 @@
 						            <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
 							        <ul class="list-unstyled">
 								        <li class="mb-2">
-								            <div class="resume-skill-name">Java</div>
+								            <div class="resume-skill-name">NodeJS</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
-								         <li class="mb-2">
+										<li class="mb-2">
+								            <div class="resume-skill-name">NestJS</div>
+									        <div class="progress resume-progress">
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											</div>
+								        </li>
+							        </ul>
+						        </div><!--//resume-skill-item-->
+
+								<div class="resume-skill-item">
+						            <h4 class="resume-skills-cat font-weight-bold">Databases</h4>
+							        <ul class="list-unstyled">
+								        <li class="mb-2">
 								            <div class="resume-skill-name">PostgreSQL</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">Python</div>
+										<li class="mb-2">
+								            <div class="resume-skill-name">MySQL</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">Node.js</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-											</div>
-								        </li>
-								        <li class="mb-2">
-								            <div class="resume-skill-name">MongoDB</div>
-									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
 						        </div><!--//resume-skill-item-->
 						        
+						        
 						        <div class="resume-skill-item">
 						            <h4 class="resume-skills-cat font-weight-bold">Others</h4>
 						            <ul class="list-inline">
 						            	<li class="list-inline-item"><span class="badge badge-light">Data Structures & Algorithms</span></li>
-						            	<li class="list-inline-item"><span class="badge badge-light">C</span></li>
-						            	<li class="list-inline-item"><span class="badge badge-light">C++</span></li>
+						            	<li class="list-inline-item"><span class="badge badge-light">GraphQL</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Spring</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
-							            <li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
+							            <li class="list-inline-item"><span class="badge badge-light">REST APIs</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Swagger</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Docker</span></li>
 						            </ul>
 						        </div><!--//resume-skill-item-->
 						    </div><!--resume-section-content-->
