Role Description and Skill Progress Updated

--- a/index.html
+++ b/index.html
@@ -68,23 +68,31 @@
    
 									    <div class="resume-timeline-item-header mb-2">
 										    <div class="d-flex flex-column flex-md-row">
-										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L2(NodeJS Developer)</h3>
+										        <h3 class="resume-position-title font-weight-bold mb-1">Associate Technology L2</h3>
 										        <div class="resume-company-name ml-auto">Publicis Sapient, Bengaluru, India</div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">May 2022 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <h5>Role Description</h5>
+										    <h5>Roles Description</h5>
+											<li>NodeJS Developer (May 2022 - Aug 2023)</li>
 										    <ul>
-										    	<li>Implementing backend functionalities using Node.js, NestJS, GraphQL, etc.</li>
-										    	<li>Responsible for Code Reviews.</li>
+										    	<li>Implemented backend functionalities using Node.js, NestJS, GraphQL, etc.</li>
+										    	<li>Was responsible for Code Reviews and SonarQube Code Quality maintenance.</li>
 												<li>Integrated multiple services of azure such as App
 													Configuration, Key Vault, Service Bus, etc. using azure SDKs for Node.js.</li>
+										    </ul>
+											<li>Java Developer (Aug 2023 - Present)</li>
+										    <ul>
+										    	<li>Working on setting up Common Integration Environment.</li>
+										    	<li>Working on Azure Serverless features such as Azure Function Apps, Logic Apps, Event Grid Topics, etc.</li>
 										    </ul>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Tools/Technologies:</h4>
 										    <ul class="list-inline">
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Node.js</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">NestJS</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Java</span></li>
+												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Spring Boot</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">GraphQL</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">TypeScript</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Docker</span></li>
@@ -92,7 +100,7 @@
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Azure</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Jira</span></li>
 											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Confluence</span></li>
-											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Gitlab</span></li>
+											    <li class="list-inline-item"><span class="badge badge-primary badge-pill">Git</span></li>
 												<li class="list-inline-item"><span class="badge badge-primary badge-pill">Redis</span></li>
 										    </ul>
 									    </div><!--//resume-timeline-item-desc-->
@@ -474,13 +482,13 @@
 								        <li class="mb-2">
 								            <div class="resume-skill-name">AWS</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 										<li class="mb-2">
 								            <div class="resume-skill-name">Azure</div>
 									        <div class="progress resume-progress">
-											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+											    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 											</div>
 								        </li>
 							        </ul>
@@ -494,6 +502,7 @@
 						            	<li class="list-inline-item"><span class="badge badge-light">GraphQL</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">J2EE</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Spring</span></li>
+										<li class="list-inline-item"><span class="badge badge-light">Spring Boot</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">Hibernate</span></li>
 							            <li class="list-inline-item"><span class="badge badge-light">REST APIs</span></li>
 										<li class="list-inline-item"><span class="badge badge-light">Swagger</span></li>
